@@ -1,37 +1,8 @@
 /* $Id*/
 
-h2.styleguide {
-  font-family: helvetica, arial, sans-serif;
-  font-weight: bold;
-  font-size: 16px;
-  text-transform: uppercase;
-  color: #ccc;
-  margin: 3em 0 0.25em 0;
-  padding: 0;
-}
-
-div.styleguide {
-  border-top: 1px solid #ccc;
-  margin: 0em 0 2em 0;
-  padding: 0;
-}
-
 #styleguide-header .item-list {
-  float: left;
-  margin: 0 0 0 2em;
+  float: right;
+  margin: 0 0 1em 2em;
   width: 20%;
   font-family: helvetica, arial, sans-serif;
-}
-
-#styleguide-header h3 {
-  font-family: helvetica, arial, sans-serif;
-  font-weight: bold;
-  font-size: 16px;
-  text-transform: uppercase;
-  color: #ccc;
-}
-
-#styleguide-header .break {
-  margin-bottom: 1em;
-  clear: both;
 }
