@@ -18,7 +18,7 @@ div.styleguide {
 
 #styleguide-header .item-list {
   float: left;
-  margin: 0 2em 0 0;
+  margin: 0 2em 1em 0;
   width: 20%;
   font-family: helvetica, arial, sans-serif;
 }
