@@ -7,6 +7,7 @@ CHANGELOG file for Style Guide.
 -- Adds group options to the API, cleaning the interface.
 -- Updates API documentation.
 -- Adds RTL css support.
+-- Fixes RTL file. Adds more padding on items.
 
 06-OCT-2010
 -- Adds hook_system_theme_page_alter().
